--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.5",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10"
   }
 }
