--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "cross-env NODE_ENV=production nodemon src/server.js"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
